added last changes